--- a/vm/Makefile
+++ b/vm/Makefile
@@ -1,9 +1,18 @@
-DOMAIN = "cent-ks"
 VCPUS = 2
-RAM = 1536
+RAM = 2048
 SIZE = 20
-ISO = "/home/ryan/Qemu/CentOS-Stream-8-x86_64-latest-dvd1.iso"
-KS_CFG = "./ks.cfg"
+KS_DIR = ./ks
+
+DOMAIN = fedora
+OS_VARIANT = fedora34
+ISO = /home/ryan/Qemu/Fedora-Server-dvd-x86_64-34-1.2.iso
+KS_NAME = fedora-ks.cfg
+#DOMAIN = "centos"
+#OS_VARIANT = centos-stream8
+#ISO = "/home/ryan/Qemu/CentOS-Stream-8-x86_64-latest-dvd1.iso"
+#KS_CFG = "./centos-ks/ks.cfg"
+
+KS_CFG := ${KS_DIR}/${KS_NAME}
 
 create:
 	virt-install --connect qemu:///system \
@@ -13,7 +22,7 @@ create:
 				 --ram=${RAM} \
 				 --disk size=${SIZE},format=qcow2,bus=virtio,cache=writeback \
 				 --os-type=linux \
-				 --os-variant=auto \
+				 --os-variant=${OS_VARIANT} \
 				 --accelerate \
 				 --nographics \
 				 --noautoconsole \
@@ -21,7 +30,7 @@ create:
 				 --location=${ISO} \
 				 --network bridge=virbr0,model=virtio \
 				 --initrd-inject ${KS_CFG} \
-				 --extra-args "inst.ks=file:/ks.cfg console=tty0 console=ttyS0,115200n8"
+				 --extra-args "inst.ks=file:/${KS_NAME} console=tty0 console=ttyS0,115200n8"
 
 	#--extra-args "inst.ks=file:/ks.cfg console=ttyS0,115200n8"
 	#--console pty,target_type=serial \
