update libvirt.md; centos -> fedora

--- a/vm/ks/fedora-ks.cfg
+++ b/vm/ks/fedora-ks.cfg
@@ -7,8 +7,7 @@ text
 # Keyboard layouts
 keyboard --xlayouts='us'
 # System language
-lang en_US.UTF-8
-#--addsupport=zh_CN.UTF-8
+lang en_US.UTF-8 --addsupport=zh_CN.UTF-8
 
 # Use CDROM installation media
 cdrom
