--- a/vm/ks/fedora-ks.cfg
+++ b/vm/ks/fedora-ks.cfg
@@ -9,6 +9,9 @@ keyboard --xlayouts='us'
 # System language
 lang en_US.UTF-8 --addsupport=zh_CN.UTF-8
 
+# Network information
+network  --hostname=fedora
+
 # Use CDROM installation media
 cdrom
 
