--- a/kubenetes/fedora-kube.cfg
+++ b/kubenetes/fedora-kube.cfg
@@ -11,6 +11,7 @@ lang en_US.UTF-8 --addsupport=zh_CN.UTF-8
 
 # Network information
 network  --hostname=fedora-master
+#network  --hostname=fedora-node
 
 # Use CDROM installation media
 cdrom
@@ -54,6 +55,7 @@ dnf install -y iproute-tc
 dnf config-manager --add-repo https://download.docker.com/linux/fedora/docker-ce.repo
 dnf install -y docker-ce docker-ce-cli containerd.io
 systemctl enable docker
+usermod -G docker -a kube
 
 modprobe br_netfilter
 cat <<EOF | tee /etc/modules-load.d/k8s.conf
@@ -65,8 +67,8 @@ net.bridge.bridge-nf-call-ip6tables = 1
 net.bridge.bridge-nf-call-iptables = 1
 EOF
 
-# 这一步理由：kubernetes/build.md
-dnf remove zram-generator-defaults
+# why: kubernetes/build.md
+dnf remove -y zram-generator-defaults
 swapoff -a
 
 cat <<EOF > /etc/yum.repos.d/kubernetes.repo
@@ -79,7 +81,7 @@ repo_gpgcheck=1
 gpgkey=https://mirrors.aliyun.com/kubernetes/yum/doc/yum-key.gpg https://mirrors.aliyun.com/kubernetes/yum/doc/rpm-package-key.gpg
 EOF
 
-dnf install -y kubelet kubeadm kubectl --disableexcludes=kubernetes
+dnf install -y kubelet kubeadm kubectl kubernetes-cni --disableexcludes=kubernetes
 systemctl enable kubelet
 %end
 
