--- a/vm/ks/fedora-ks.cfg
+++ b/vm/ks/fedora-ks.cfg
@@ -40,4 +40,7 @@ timezone Asia/Shanghai --utc
 rootpw abcdef
 user --groups=wheel --name=demo --password=abcdef --gecos="demo"
 
+firewall --disable
+selinux --disable
+
 reboot --eject
